@startuml
hide empty members

package misc {
    abstract Multicall
    abstract ReentrancyProtection
    abstract Recoverable
}

package common {
    class MessageDispatcher
    class Gateway
}

package managers {
    class NAVManager
    class SimplePriceManager
    interface INAVHook
}

class Holdings
class HubRegistry
class ShareClassManager
class Accounting
class "Hub/HubHelpers" as Hub

note right of Hub: "HubHelpers is conceptually Hub.\nIt's just a split contract to avoid\ncontract max size limitations"

interface ISnapshotHook
interface IValuation

Hub -up-|> Multicall
Multicall -up-|> ReentrancyProtection
Hub -up-|> Recoverable

Hub --> Holdings
Hub --> HubRegistry
Hub --> ShareClassManager
Hub --> Accounting
Hub -up-> MessageDispatcher
Hub -up-> Gateway
Holdings --> IValuation
Holdings -|> ISnapshotHook

NAVManager -|> ISnapshotHook
NAVManager -down-|> INAVHook
SimplePriceManager -up-|> INAVHook

Holdings --> HubRegistry
ShareClassManager --> HubRegistry
Accounting --> HubRegistry

@enduml
